syntax = "proto3";
package neutron.feerefunder;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/neutron-org/neutron/v5/x/feerefunder/types";

// Fee defines the ICS29 receive, acknowledgement and timeout fees
message Fee {
  // the packet receive fee
  repeated cosmos.base.v1beta1.Coin recv_fee = 1 [
    (gogoproto.moretags) = "yaml:\"recv_fee\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // the packet acknowledgement fee
  repeated cosmos.base.v1beta1.Coin ack_fee = 2 [
    (gogoproto.moretags) = "yaml:\"ack_fee\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  // the packet timeout fee
  repeated cosmos.base.v1beta1.Coin timeout_fee = 3 [
    (gogoproto.moretags) = "yaml:\"timeout_fee\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message PacketID {
  string channel_id = 1;
  string port_id = 2;
  uint64 sequence = 3;
}
